# terminal_commander

./: #CMakeLists#  .gitignore  .gitmodules  .makefile.swm  .makefile.swo  .makefile.swp  .sconsign.dblite  README.md  SConstruct  log  makefile  makefile~  meson.build  temp  terminal_commander.cbp  terminal_commander.depend  terminal_commander.layout  test  test_ui.xml  thinking_pad.txt  ui.tuml  ui.xml  unit_test  unit_test.c  unit_test.cpp
include/: .interface.h.swp  .terminal_info.h.swp  TuiXMLElement.h  TumlElement.hpp  default_element_attributes.h  default_element_attributes.h.gch  draw.h  draw.hpp  interface.h  interface.h~  interfaceData.hpp  miscellaneous.h  miscellaneous.h.gch  target.h  terminal_commander.h  terminal_commander.h.gch  terminal_commander.hpp  terminal_info.h  terminal_info.h.gch  terminal_info.h~  tinyxml2.h  utilities.h
src/: .getTerminalDimensions.py.swp  .interface.c.swn  .interface.c.swp  .main.c.swp  .terminal_info.c.swp  TuiXMLElement.cpp  draw.c  getColumns.py  getTerminalDimensions.py~  interface.c  interface.c~  main.c  main.c~  terminal_commander.c  terminal_commander.cpp  terminal_commander.os  terminal_info.c  terminal_info.c~  terminal_info.os  test.c  unit_test.cpp  utilities.c
src/python/: .getTerminalDimensions.py.swp
